# rc_mail_assistant

./: .env.example  .gitignore  README.md  docker-compose.override.yml.example  docker-compose.yml
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md
.specify/extensions/: .registry
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
backend/: .dockerignore  Dockerfile  conftest.py  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_settings_table.py  0002_create_mail_tables.py  0003_create_gmail_credentials.py
backend/src/: config.py  database.py  logging_config.py  main.py
backend/src/adapters/: gmail_adapter.py
backend/src/api/: auth.py  config.py  health.py  mail.py
backend/src/models/: __init__.py  gmail_credential.py  mail.py  settings.py
backend/src/services/: config_service.py  gmail_credential_service.py  health_service.py  llm_service.py  mail_service.py  scheduler_service.py
backend/src/templates/: base.html  config.html  dashboard.html  error.html  health.html  health_fragment.html  mail_detail.html  mail_list.html  mail_sync_result.html  mail_sync_status.html
backend/tests/integration/: test_auth_api.py  test_health_fragment_gmail_status.py  test_mail_api.py
backend/tests/unit/: test_gmail_adapter.py  test_gmail_credential_service.py  test_mail_service.py  test_scheduler_service.py
chatgpt/: README_DEV.md
chatgpt/docs/: DEPLOYMENT.md  LLM_PROMPTS.md
chatgpt/spec/: CLARIFICATIONS.md  CONSTITUTION.md  PLAN.md  SPECIFICATION.md  TASKS.md  VALIDATION.md
preparation/chatgpt/: prompt.txt
specs/001-core-infrastructure/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+30 files in other folders)
